Kubernetes/Scripts/Ingress/Dev-LetsEncrypt/nginx-config-registrationportal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lunchbagregistrationportal
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx-registration"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - lunchbagregistrationportal.eastus.cloudapp.azure.com
    secretName: tls-secret-registrationportal
  rules:
  - host: lunchbagregistrationportal.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: lunchbagregistrationportal
          servicePort: 80
      - path: /api
        backend:
          serviceName: lunchbagregistrationportalapi
          servicePort: 80
