Kubernetes/Scripts/Ingress/Dev-LetsEncrypt/nginx-config-webportal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lunchbagwebportal
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx-web"
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - lunchbagwebportal.eastus.cloudapp.azure.com
    secretName: tls-secret-webportal
  rules:
  - host: lunchbagwebportal.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: lunchbagwebportal
          servicePort: 80
      - path: /api
        backend:
          serviceName: lunchbagwebportalapi
          servicePort: 80
